// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders correctly 1`] = `
<DocumentFragment>
  .cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-checked="true"]+.eu28k4m3 {
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-132frtl-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  color: #4a4f62;
}

.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<label
    aria-disabled="false"
    class="eu28k4m1 e1g1zfwd0 cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer"
  >
    <input
      aria-checked="false"
      aria-invalid="false"
      class="cache-132frtl-StyledReakitCheckbox eu28k4m2"
      name="testing"
      type="checkbox"
    />
    <svg
      class="eu28k4m3 etwatq50 cache-67zp2y-StyledIcon-sizeStyles-StyledIcon"
      viewBox="0 0 24 24"
    >
      <path
        d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
      />
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly checked 1`] = `
<DocumentFragment>
  .cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-checked="true"]+.eu28k4m3 {
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-132frtl-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  color: #4a4f62;
}

.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<label
    aria-disabled="false"
    class="eu28k4m1 e1g1zfwd0 cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer"
  >
    <input
      aria-checked="true"
      aria-invalid="false"
      checked=""
      class="cache-132frtl-StyledReakitCheckbox eu28k4m2"
      name="checkbox-6c756c756c756c756c756c756c756c75"
      type="checkbox"
    />
    <svg
      class="eu28k4m3 etwatq50 cache-67zp2y-StyledIcon-sizeStyles-StyledIcon"
      viewBox="0 0 24 24"
    >
      <path
        d="M19,19H5V5H15V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V11H19M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
      />
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly checked and disabled 1`] = `
<DocumentFragment>
  .cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-checked="true"]+.eu28k4m3 {
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-132frtl-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  color: #4a4f62;
}

.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<label
    aria-disabled="true"
    class="eu28k4m1 e1g1zfwd0 cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer"
  >
    <input
      aria-checked="true"
      aria-disabled="true"
      aria-invalid="false"
      checked=""
      class="cache-132frtl-StyledReakitCheckbox eu28k4m2"
      disabled=""
      name="checkbox-6c756c756c756c756c756c756c756c75"
      style="pointer-events: none;"
      type="checkbox"
    />
    <svg
      class="eu28k4m3 etwatq50 cache-67zp2y-StyledIcon-sizeStyles-StyledIcon"
      disabled=""
      viewBox="0 0 24 24"
    >
      <path
        d="M19,19H5V5H15V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V11H19M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
      />
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly disabled 1`] = `
<DocumentFragment>
  .cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-checked="true"]+.eu28k4m3 {
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-132frtl-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  color: #4a4f62;
}

.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<label
    aria-disabled="true"
    class="eu28k4m1 e1g1zfwd0 cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer"
  >
    <input
      aria-checked="false"
      aria-disabled="true"
      aria-invalid="false"
      class="cache-132frtl-StyledReakitCheckbox eu28k4m2"
      disabled=""
      name="checkbox-6c756c756c756c756c756c756c756c75"
      style="pointer-events: none;"
      type="checkbox"
    />
    <svg
      class="eu28k4m3 etwatq50 cache-67zp2y-StyledIcon-sizeStyles-StyledIcon"
      disabled=""
      viewBox="0 0 24 24"
    >
      <path
        d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
      />
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly indeterminate 1`] = `
<DocumentFragment>
  .cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-checked="true"]+.eu28k4m3 {
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-132frtl-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  color: #4a4f62;
}

.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<label
    aria-disabled="false"
    class="eu28k4m1 e1g1zfwd0 cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer"
  >
    <input
      aria-checked="mixed"
      aria-invalid="false"
      class="cache-132frtl-StyledReakitCheckbox eu28k4m2"
      name="checkbox-6c756c756c756c756c756c756c756c75"
      type="checkbox"
    />
    <svg
      class="eu28k4m3 etwatq50 cache-67zp2y-StyledIcon-sizeStyles-StyledIcon"
      viewBox="0 0 24 24"
    >
      <path
        d="M19,19V5H5V19H19M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5C3,3.89 3.9,3 5,3H19M17,11V13H7V11H17Z"
      />
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly indeterminate and disabled 1`] = `
<DocumentFragment>
  .cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-checked="true"]+.eu28k4m3 {
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-132frtl-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  color: #4a4f62;
}

.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<label
    aria-disabled="true"
    class="eu28k4m1 e1g1zfwd0 cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer"
  >
    <input
      aria-checked="mixed"
      aria-disabled="true"
      aria-invalid="false"
      class="cache-132frtl-StyledReakitCheckbox eu28k4m2"
      disabled=""
      name="checkbox-6c756c756c756c756c756c756c756c75"
      style="pointer-events: none;"
      type="checkbox"
    />
    <svg
      class="eu28k4m3 etwatq50 cache-67zp2y-StyledIcon-sizeStyles-StyledIcon"
      disabled=""
      viewBox="0 0 24 24"
    >
      <path
        d="M19,19V5H5V19H19M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5C3,3.89 3.9,3 5,3H19M17,11V13H7V11H17Z"
      />
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly invisible 1`] = `
<DocumentFragment>
  .cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-checked="true"]+.eu28k4m3 {
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-132frtl-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  color: #4a4f62;
}

.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<label
    aria-disabled="false"
    class="eu28k4m1 e1g1zfwd0 cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer"
    data-visibility="true"
  >
    <input
      aria-checked="false"
      aria-invalid="false"
      class="cache-132frtl-StyledReakitCheckbox eu28k4m2"
      name="checkbox-6c756c756c756c756c756c756c756c75"
      type="checkbox"
    />
    <svg
      class="eu28k4m3 etwatq50 cache-67zp2y-StyledIcon-sizeStyles-StyledIcon"
      viewBox="0 0 24 24"
    >
      <path
        d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
      />
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly no child 1`] = `
<DocumentFragment>
  .cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-checked="true"]+.eu28k4m3 {
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-132frtl-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  color: #4a4f62;
}

.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<label
    aria-disabled="false"
    class="eu28k4m1 e1g1zfwd0 cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer"
  >
    <input
      aria-checked="false"
      aria-invalid="false"
      class="cache-132frtl-StyledReakitCheckbox eu28k4m2"
      name="checkbox-6c756c756c756c756c756c756c756c75"
      type="checkbox"
    />
    <svg
      class="eu28k4m3 etwatq50 cache-67zp2y-StyledIcon-sizeStyles-StyledIcon"
      viewBox="0 0 24 24"
    >
      <path
        d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with a value 1`] = `
<DocumentFragment>
  .cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-checked="true"]+.eu28k4m3 {
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-132frtl-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  color: #4a4f62;
}

.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<label
    aria-disabled="false"
    class="eu28k4m1 e1g1zfwd0 cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer"
  >
    <input
      aria-checked="false"
      aria-invalid="false"
      class="cache-132frtl-StyledReakitCheckbox eu28k4m2"
      name="checkbox-6c756c756c756c756c756c756c756c75"
      type="checkbox"
      value="test"
    />
    <svg
      class="eu28k4m3 etwatq50 cache-67zp2y-StyledIcon-sizeStyles-StyledIcon"
      viewBox="0 0 24 24"
    >
      <path
        d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
      />
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with an error 1`] = `
<DocumentFragment>
  .cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-checked="true"]+.eu28k4m3 {
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-132frtl-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  color: #4a4f62;
}

.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<label
    aria-disabled="false"
    class="eu28k4m1 e1g1zfwd0 cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer"
  >
    <input
      aria-checked="false"
      aria-describedby="checkbox-6c756c756c756c756c756c756c756c75-hint"
      aria-invalid="true"
      class="cache-132frtl-StyledReakitCheckbox eu28k4m2"
      name="checkbox-6c756c756c756c756c756c756c756c75"
      type="checkbox"
    />
    <svg
      class="eu28k4m3 etwatq50 cache-67zp2y-StyledIcon-sizeStyles-StyledIcon"
      viewBox="0 0 24 24"
    >
      <path
        d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
      />
    </svg>
    Checkbox Label
  </label>
  .cache-8c1h4a-StyledText-bodyB-variantStyles-colorStyles-StyledError {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
  color: #a6102d;
  padding: 0 4px;
}

<p
    class="eu28k4m4 e1g1zfwd0 cache-8c1h4a-StyledText-bodyB-variantStyles-colorStyles-StyledError"
    id="checkbox-6c756c756c756c756c756c756c756c75-id"
  >
    test error
  </p>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with indeterminate state 1`] = `
<DocumentFragment>
  .cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-checked="true"]+.eu28k4m3 {
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-132frtl-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  color: #4a4f62;
}

.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon.cache-67zp2y-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<label
    aria-disabled="false"
    class="eu28k4m1 e1g1zfwd0 cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer"
  >
    <input
      aria-checked="mixed"
      aria-invalid="false"
      class="cache-132frtl-StyledReakitCheckbox eu28k4m2"
      name="checkbox-6c756c756c756c756c756c756c756c75"
      type="checkbox"
    />
    <svg
      class="eu28k4m3 etwatq50 cache-67zp2y-StyledIcon-sizeStyles-StyledIcon"
      viewBox="0 0 24 24"
    >
      <path
        d="M19,19V5H5V19H19M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5C3,3.89 3.9,3 5,3H19M17,11V13H7V11H17Z"
      />
    </svg>
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with progress 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-1tqrbnc-StyledActivityContainer {
  display: inline;
  vertical-align: middle;
  margin-right: 8px;
}

.cache-gqzzce-Loader {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<div
    class="cache-1tqrbnc-StyledActivityContainer eu28k4m0"
  >
    <svg
      aria-label="Loading"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="cache-gqzzce-Loader"
      role="progressbar"
      style="height: 24px; width: 24px;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#d4dae7"
        stroke-width="16"
      />
      <circle
        class="cache-11f05l0-Loader"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#4f0599"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
  .cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-checked="true"]+.eu28k4m3 {
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-132frtl-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

<label
    aria-disabled="false"
    class="eu28k4m1 e1g1zfwd0 cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer"
  >
    <input
      aria-checked="false"
      aria-invalid="false"
      class="cache-132frtl-StyledReakitCheckbox eu28k4m2"
      name="checkbox-6c756c756c756c756c756c756c756c75"
      type="checkbox"
    />
    Checkbox Label
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with progress and no child 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-1x5sj3x-StyledActivityContainer {
  display: inline;
  vertical-align: middle;
  margin-right: 0;
}

.cache-gqzzce-Loader {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<div
    class="cache-1x5sj3x-StyledActivityContainer eu28k4m0"
  >
    <svg
      aria-label="Loading"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="cache-gqzzce-Loader"
      role="progressbar"
      style="height: 24px; width: 24px;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#d4dae7"
        stroke-width="16"
      />
      <circle
        class="cache-11f05l0-Loader"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#4f0599"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
  .cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-checked="true"]+.eu28k4m3 {
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-132frtl-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

<label
    aria-disabled="false"
    class="eu28k4m1 e1g1zfwd0 cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer"
  >
    <input
      aria-checked="false"
      aria-invalid="false"
      class="cache-132frtl-StyledReakitCheckbox eu28k4m2"
      name="checkbox-6c756c756c756c756c756c756c756c75"
      type="checkbox"
    />
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with sizes 1`] = `
<DocumentFragment>
  .cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-checked="true"]+.eu28k4m3 {
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1fh2o0l-StyledReakitCheckbox {
  opacity: 0.01;
  width: 37px;
  height: 37px;
  position: absolute;
  cursor: pointer;
}

.cache-oofvmt-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 37px;
  width: 37px;
  min-width: 37px;
  min-height: 37px;
  margin-right: 8px;
  border-radius: 4px;
  color: #4a4f62;
}

.cache-oofvmt-StyledIcon-sizeStyles-StyledIcon.cache-oofvmt-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<label
    aria-disabled="false"
    class="eu28k4m1 e1g1zfwd0 cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer"
  >
    <input
      aria-checked="false"
      aria-invalid="false"
      class="cache-1fh2o0l-StyledReakitCheckbox eu28k4m2"
      name="checkbox-6c756c756c756c756c756c756c756c75"
      type="checkbox"
      value="test"
    />
    <svg
      class="eu28k4m3 etwatq50 cache-oofvmt-StyledIcon-sizeStyles-StyledIcon"
      viewBox="0 0 24 24"
    >
      <path
        d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
      />
    </svg>
    Checkbox Label
  </label>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-1tqrbnc-StyledActivityContainer {
  display: inline;
  vertical-align: middle;
  margin-right: 8px;
}

.cache-gqzzce-Loader {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<div
    class="cache-1tqrbnc-StyledActivityContainer eu28k4m0"
  >
    <svg
      aria-label="Loading"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="cache-gqzzce-Loader"
      role="progressbar"
      style="height: 37px; width: 37px;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#d4dae7"
        stroke-width="16"
      />
      <circle
        class="cache-11f05l0-Loader"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#4f0599"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
  .cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-checked="true"]+.eu28k4m3 {
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer .eu28k4m2[aria-invalid="true"]:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1fh2o0l-StyledReakitCheckbox {
  opacity: 0.01;
  width: 37px;
  height: 37px;
  position: absolute;
  cursor: pointer;
}

<label
    aria-disabled="false"
    class="eu28k4m1 e1g1zfwd0 cache-1baz7su-StyledText-variantStyles-StyledCheckBoxContainer"
  >
    <input
      aria-checked="false"
      aria-invalid="false"
      class="cache-1fh2o0l-StyledReakitCheckbox eu28k4m2"
      name="checkbox-6c756c756c756c756c756c756c756c75"
      type="checkbox"
      value="test"
    />
    Checkbox Label
  </label>
</DocumentFragment>
`;
